resolves pom typo

--- a/nlp/admin/web/pom.xml
+++ b/nlp/admin/web/pom.xml
@@ -22,7 +22,7 @@
 
   <parent>
     <groupId>fr.vsct.tock</groupId>
-    <artifactId>tock-admin</artifactId>
+    <artifactId>tock-nlp-admin</artifactId>
     <version>0.1-SNAPSHOT</version>
   </parent>
 
