add bot-framework module & rename end user tock-nlp-api-client to nlp-api-client
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/engine/pom.xml
+++ b/bot/engine/pom.xml
@@ -36,7 +36,7 @@
         </dependency>
         <dependency>
             <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-nlp-api-client</artifactId>
+            <artifactId>nlp-api-client</artifactId>
         </dependency>
 
         <dependency>
