--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
             </dependency>
             <dependency>
                 <groupId>fr.vsct.tock</groupId>
-                <artifactId>tock-nlp-api-client</artifactId>
+                <artifactId>nlp-api-client</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
