--- a/bot/framework/pom.xml
+++ b/bot/framework/pom.xml
@@ -22,37 +22,24 @@
 
     <parent>
         <groupId>fr.vsct.tock</groupId>
-        <artifactId>tock-nlp-api</artifactId>
+        <artifactId>tock-bot</artifactId>
         <version>0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>nlp-api-client</artifactId>
+    <artifactId>bot-framework</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-nlp-entity-value</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.squareup.retrofit2</groupId>
-            <artifactId>retrofit</artifactId>
+            <artifactId>tock-bot-engine</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.squareup.retrofit2</groupId>
-            <artifactId>converter-jackson</artifactId>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-bot-connector-messenger</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.module</groupId>
-            <artifactId>jackson-module-kotlin</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-bot-storage-mongo</artifactId>
         </dependency>
     </dependencies>
 
