add retrofit extensions
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -97,6 +97,16 @@
             <artifactId>kmongo</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>retrofit</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>converter-jackson</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
