move i18n to translator dedicated module
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/engine/pom.xml
+++ b/bot/engine/pom.xml
@@ -38,6 +38,10 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>nlp-api-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-translator-core</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.vertx</groupId>
