--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
 
     <modules>
         <module>shared</module>
+        <module>translator</module>
         <module>nlp</module>
         <module>bot</module>
     </modules>
@@ -92,6 +93,16 @@
             <dependency>
                 <groupId>fr.vsct.tock</groupId>
                 <artifactId>nlp-api-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>fr.vsct.tock</groupId>
+                <artifactId>tock-translator-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>fr.vsct.tock</groupId>
+                <artifactId>tock-translator-noop</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -216,7 +227,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>${plugin.surefire}</version>
                 <configuration>
                     <includes>
                         <include>**/*Test.*</include>
