--- a/nlp/entity-evaluator/duckling/client/pom.xml
+++ b/nlp/entity-evaluator/duckling/client/pom.xml
@@ -48,6 +48,10 @@
             <artifactId>converter-jackson</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
         </dependency>
