--- a/nlp/api/client/pom.xml
+++ b/nlp/api/client/pom.xml
@@ -43,6 +43,10 @@
             <artifactId>converter-jackson</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
         </dependency>
