--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
 
         <kotlin>1.1.1</kotlin>
 
-        <slf4j>1.7.13</slf4j>
-        <logback>1.1.3</logback>
+        <slf4j>1.7.25</slf4j>
+        <logback>1.2.3</logback>
         <kotlin-logging>1.4.1</kotlin-logging>
 
         <kodein>3.2.0</kodein>
@@ -176,6 +176,12 @@
                 <artifactId>logback-classic</artifactId>
                 <version>${logback}</version>
             </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jul-to-slf4j</artifactId>
+                <version>${slf4j}</version>
+            </dependency>
+
             <dependency>
                 <groupId>io.github.microutils</groupId>
                 <artifactId>kotlin-logging</artifactId>
