move "framework" to "toolkit"
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -34,7 +34,7 @@
         <module>connector-messenger</module>
         <module>storage-mongo</module>
 
-        <module>framework</module>
+        <module>toolkit</module>
     </modules>
 
     <dependencyManagement>
