--- a/bot/toolkit/pom.xml
+++ b/bot/toolkit/pom.xml
@@ -26,7 +26,7 @@
         <version>0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>bot-framework</artifactId>
+    <artifactId>bot-toolkit</artifactId>
 
     <dependencies>
         <dependency>
