add assembly for docker files
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/server/pom.xml
+++ b/nlp/admin/server/pom.xml
@@ -49,8 +49,15 @@
 
         <dependency>
             <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-nlp-admin-web</artifactId>
+            <type>jar</type>
+            <classifier>web</classifier>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-nlp-front-ioc</artifactId>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
