--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "mavenbuild": "ng build --prod --aot"
   },
   "private": true,
   "dependencies": {
