fixes typo on npm install
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/pom.xml
+++ b/nlp/admin/web/pom.xml
@@ -47,7 +47,7 @@
           </execution>
           <execution>
             <id>npm install</id>
-            <phase>initialize</phase>
+            <phase>generate-resources</phase>
             <goals>
               <goal>npm</goal>
             </goals>
