remove temporarily aot
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "mavenbuild": "ng build --prod --aot"
+    "mavenbuild": "ng build --env=prod"
   },
   "private": true,
   "dependencies": {
