--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.2",
-    "angular2-infinite-scroll": "^0.3.4",
+    "ngx-infinite-scroll": "^0.4.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
