add name and description in pom files to prepare relase
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/connector-messenger/pom.xml
+++ b/bot/connector-messenger/pom.xml
@@ -27,11 +27,12 @@
     </parent>
 
     <artifactId>tock-bot-connector-messenger</artifactId>
+    <name>Tock Bot Messenger Connector</name>
+    <description>Connector for Facebook Messenger</description>
 
     <properties>
         <commons-codec>1.9</commons-codec>
     </properties>
-    
 
     <dependencies>
         <dependency>
