--- a/bot/storage-mongo/pom.xml
+++ b/bot/storage-mongo/pom.xml
@@ -27,6 +27,9 @@
     </parent>
 
     <artifactId>tock-bot-storage-mongo</artifactId>
+    <name>Tock NLP Bot Mongo</name>
+    <description>Mongo storage implementation for Tock NLP Bot</description>
+
 
     <dependencies>
         <dependency>
