--- a/nlp/core/service/pom.xml
+++ b/nlp/core/service/pom.xml
@@ -27,6 +27,8 @@
     </parent>
 
     <artifactId>tock-nlp-core-service</artifactId>
+    <name>Nlp Core Service</name>
+    <description>Services for Nlp Core</description>
 
     <dependencies>
         <dependency>
