--- a/nlp/model/service/pom.xml
+++ b/nlp/model/service/pom.xml
@@ -27,6 +27,8 @@
     </parent>
 
     <artifactId>tock-nlp-model-service</artifactId>
+    <name>Nlp Model Service</name>
+    <description>Services for Nlp Model</description>
 
     <dependencies>
         <dependency>
