--- a/translator/pom.xml
+++ b/translator/pom.xml
@@ -28,6 +28,8 @@
 
     <artifactId>tock-translator</artifactId>
     <packaging>pom</packaging>
+    <name>Tock Translator</name>
+    <description>Toot project for translators</description>
 
     <modules>
         <module>core</module>
