--- a/bot/engine/pom.xml
+++ b/bot/engine/pom.xml
@@ -27,9 +27,10 @@
     </parent>
 
     <artifactId>tock-bot-engine</artifactId>
+    <name>Tock Bot Engine</name>
+    <description>Core framework for building bots</description>
 
     <dependencies>
-
         <dependency>
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-shared</artifactId>
