resolves #3 - implements import/export facility
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/front/pom.xml
+++ b/nlp/front/pom.xml
@@ -42,6 +42,22 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-shared</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test-junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.nhaarman</groupId>
+            <artifactId>mockito-kotlin</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
