--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -13,19 +13,20 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
-    "@angular/animations": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/material": "^2.0.0-beta.2",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.2",
-    "ngx-infinite-scroll": "^0.4.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ng2-file-upload": "^1.2.1",
+    "ngx-infinite-scroll": "^0.4.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
