--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <okhttp>3.3.0</okhttp>
 
         <junit>4.12</junit>
+        <mockito-kotlin>1.4.0</mockito-kotlin>
 
         <plugin.surefire>2.19.1</plugin.surefire>
         <plugin.source>3.0.1</plugin.source>
@@ -202,6 +203,12 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-test-junit</artifactId>
                 <version>${kotlin}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.nhaarman</groupId>
+                <artifactId>mockito-kotlin</artifactId>
+                <version>${mockito-kotlin}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
