--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.2",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.3",
     "hammerjs": "^2.0.8",
     "ng2-file-upload": "^1.2.1",
     "ngx-infinite-scroll": "^0.4.1",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "^4.0.2",
+    "@types/filesaver": "0.0.30",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
