fixes #18 OpenNLP - issue with adjacent spans of same type
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/model/pom.xml
+++ b/nlp/model/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.nhaarman</groupId>
+            <artifactId>mockito-kotlin</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
