resolves #22 Entity value refactoring
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/api/pom.xml
+++ b/nlp/api/pom.xml
@@ -34,4 +34,11 @@
         <module>client</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-nlp-entity-value</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
