--- a/nlp/entity-evaluator/duckling/pom.xml
+++ b/nlp/entity-evaluator/duckling/pom.xml
@@ -26,7 +26,7 @@
 
     <artifactId>tock-nlp-duckling</artifactId>
     <packaging>pom</packaging>
-    <name>Duckling Entities</name>
+    <name>Tock Duckling Entities</name>
     <description>Root project for Duckling Entities</description>
 
     <modules>
