--- a/nlp/api/service/pom.xml
+++ b/nlp/api/service/pom.xml
@@ -25,7 +25,7 @@
     </parent>
 
     <artifactId>tock-nlp-api-service</artifactId>
-    <name>Nlp API Service</name>
+    <name>Tock NLP API Service</name>
     <description>Services for Nlp API</description>
 
     <dependencies>
@@ -36,10 +36,6 @@
         <dependency>
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-nlp-front-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-nlp-entity-value</artifactId>
         </dependency>
         <dependency>
             <groupId>fr.vsct.tock</groupId>
