--- a/nlp/entity-evaluator/duckling/client/pom.xml
+++ b/nlp/entity-evaluator/duckling/client/pom.xml
@@ -25,7 +25,7 @@
     </parent>
 
     <artifactId>tock-nlp-duckling-client</artifactId>
-    <name>Duckling Entities Client</name>
+    <name>Tock Duckling Entities Client</name>
     <description>Client interface for Duckling Entities</description>
 
     <dependencies>
