--- a/translator/core/pom.xml
+++ b/translator/core/pom.xml
@@ -25,7 +25,7 @@
     </parent>
 
     <artifactId>tock-translator-core</artifactId>
-    <name>Translator Core</name>
+    <name>Tock Translator Core</name>
     <description>Translator core classes</description>
 
     <dependencies>
