resolves #14 Enable cache in memory for NLP models
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/model/service/pom.xml
+++ b/nlp/model/service/pom.xml
@@ -33,6 +33,10 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-nlp-model-shared</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
 
     </dependencies>
 
