--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <vertx>3.4.1</vertx>
         <retrofit>2.1.0</retrofit>
         <okhttp>3.3.0</okhttp>
+        <guava>21.0</guava>
 
         <junit>4.12</junit>
         <mockito-kotlin>1.4.0</mockito-kotlin>
@@ -169,6 +170,11 @@
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>logging-interceptor</artifactId>
                 <version>${okhttp}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava}</version>
             </dependency>
 
             <dependency>
